--- a/tic-tac-toe/assets/css/style.css
+++ b/tic-tac-toe/assets/css/style.css
@@ -26,8 +26,17 @@ html {
 }
 
 .div-game-square {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100px;
-    border: 0.2rem solid black;
+    color: white;
+    background-color: black;
     aspect-ratio: 1 / 1;
     cursor: pointer;
+}
+
+.div-game-square ion-icon {
+    font-size: 6.4rem;
+    color: inherit;
 }
