--- a/tic-tac-toe/assets/css/style.css
+++ b/tic-tac-toe/assets/css/style.css
@@ -7,6 +7,7 @@
     --gray-shade: #212529;
     --gradient-red: #ffa8a8;
     --gradient-indigo: #91a7ff;
+    --shadow-sm: rgba(0, 0, 0, 0.2);
 }
 
 /* GENERAL SELECTORS */
@@ -25,6 +26,99 @@ html {
 body {
     height: 100vh;
     background: linear-gradient(to left top, var(--gradient-red), var(--gradient-indigo));
+}
+
+/* CONFIRMATION POPUP DIV */
+.div-confirmation-popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: transform 1s;
+    z-index: 2;
+}
+
+.hide-up {
+    transform: translateY(-100%);
+}
+
+/* CONFIRMATION POPUP CONTENT DIV */
+.div-confirmation-popup-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1.2rem;
+    width: 64rem;
+    height: 24rem;
+    text-align: center;
+    border-radius: 0.4rem;
+    transform: translate(-50%, -50%);
+}
+
+.div-confirmation-popup-content::before,
+.div-confirmation-popup-content::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    width: 0.2rem;
+    height: inherit;
+    background-color: var(--white);
+}
+
+.div-confirmation-popup-content::before {
+    left: 0;
+    border-radius: 0 0.4rem 0.4rem 0;
+}
+
+.div-confirmation-popup-content::after {
+    right: 0;
+    border-radius: 0.4rem 0 0 0.4rem;
+}
+
+.div-confirmation-popup-content h2 {
+    display: flex;
+    align-items: center;
+    gap: 1.2rem;
+    font-size: 4.8rem;
+    font-weight: 600;
+}
+
+.div-confirmation-popup-content ion-icon {
+    font-size: 6.4rem;
+}
+
+.div-confirmation-popup-content button {
+    all: unset;
+    display: inline-block;
+    width: 18rem;
+    padding: 0.8rem 0;
+    font-size: 2rem;
+    font-weight: 500;
+    background: linear-gradient(to right bottom, var(--gradient-red), var(--gradient-indigo));
+    border-radius: 0.4rem;
+    cursor: pointer;
+}
+
+/* POPUP OVERLAY */
+.div-popup-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: var(--shadow-sm);
+    backdrop-filter: blur(0.8rem);
+    transition: transform 1s;
+    z-index: 1;
+}
+
+.hide-down {
+    transform: translateY(100%);
 }
 
 /* MAIN CONTAINER */
@@ -74,7 +168,7 @@ body {
     left: 50%;
     display: flex;
     flex-direction: column;
-    gap: 2.4rem;
+    gap: 1.2rem;
     width: 48rem;
     aspect-ratio: 1 / 1;
     border-radius: 0.4rem;
@@ -134,16 +228,32 @@ body {
     display: flex;
     flex-direction: column;
     gap: 1.2rem;
+    height: calc((3 * 4.8rem) + (2 * 1.2rem));
+    border-radius: 0.4rem;
     list-style: none;
+    overflow-y: scroll;
+}
+
+.score-history-list::-webkit-scrollbar {
+    width: 0.4rem;
+}
+
+.score-history-list::-webkit-scrollbar-thumb {
+    background-color: var(--white);
+    border-radius: 0.4rem;
 }
 
 .score-history-list-item {
+    flex-shrink: 0;
     display: inherit;
+    align-items: center;
     justify-content: space-between;
-    padding: 1.2rem;
+    height: 4.8rem;
+    margin-right: 0.8rem;
+    padding: 0 1.2rem;
     font-size: 1.6rem;
     box-shadow: inset 0 0 0 0.2rem var(--white);
-    border-radius: 0.4rem;
+    border-radius: inherit;
 }
 
 .score-history-list-item div {
