--- a/tic-tac-toe/assets/css/style.css
+++ b/tic-tac-toe/assets/css/style.css
@@ -40,7 +40,7 @@ body {
 }
 
 .hide-up {
-    transform: translateY(-100%);
+    transform: translateY(-100%) !important;
 }
 
 /* CONFIRMATION POPUP CONTENT DIV */
@@ -104,6 +104,68 @@ body {
     cursor: pointer;
 }
 
+/* GAME HISTORY POPUP DIV */
+.div-game-history-popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: transform 1s;
+    z-index: 2;
+}
+
+/* SCORE HISTORY CONTAINER DIV */
+.div-game-history-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1.2rem;
+}
+
+.div-game-history-container h3 {
+    font-size: 1.8rem;
+    font-weight: 500;
+    text-align: center;
+}
+
+/* SCORE HISTORY LIST */
+.score-history-list {
+    display: flex;
+    flex-direction: column;
+    gap: 1.2rem;
+    height: calc((3 * 4.8rem) + (2 * 1.2rem));
+    border-radius: 0.4rem;
+    list-style: none;
+    overflow-y: scroll;
+}
+
+.score-history-list::-webkit-scrollbar {
+    width: 0.4rem;
+}
+
+.score-history-list::-webkit-scrollbar-thumb {
+    background-color: var(--white);
+    border-radius: 0.4rem;
+}
+
+.score-history-list-item {
+    flex-shrink: 0;
+    display: inherit;
+    align-items: center;
+    justify-content: space-between;
+    height: 4.8rem;
+    margin-right: 0.8rem;
+    padding: 0 1.2rem;
+    font-size: 1.6rem;
+    box-shadow: inset 0 0 0 0.2rem var(--white);
+    border-radius: inherit;
+}
+
+.score-history-list-item div {
+    display: inherit;
+    gap: 0.8rem;
+}
+
 /* POPUP OVERLAY */
 .div-popup-overlay {
     position: fixed;
@@ -118,7 +180,7 @@ body {
 }
 
 .hide-down {
-    transform: translateY(100%);
+    transform: translateY(100%) !important;
 }
 
 /* MAIN CONTAINER */
@@ -208,57 +270,6 @@ body {
 /* SCORE LABELS CONTAINER DIV */
 .div-score-labels-container ion-icon {
     font-size: 4rem;
-}
-
-/* SCORE HISTORY CONTAINER DIV */
-.div-game-history-container {
-    display: flex;
-    flex-direction: column;
-    gap: 1.2rem;
-}
-
-.div-game-history-container h3 {
-    font-size: 1.8rem;
-    font-weight: 500;
-    text-align: center;
-}
-
-/* SCORE HISTORY LIST */
-.score-history-list {
-    display: flex;
-    flex-direction: column;
-    gap: 1.2rem;
-    height: calc((3 * 4.8rem) + (2 * 1.2rem));
-    border-radius: 0.4rem;
-    list-style: none;
-    overflow-y: scroll;
-}
-
-.score-history-list::-webkit-scrollbar {
-    width: 0.4rem;
-}
-
-.score-history-list::-webkit-scrollbar-thumb {
-    background-color: var(--white);
-    border-radius: 0.4rem;
-}
-
-.score-history-list-item {
-    flex-shrink: 0;
-    display: inherit;
-    align-items: center;
-    justify-content: space-between;
-    height: 4.8rem;
-    margin-right: 0.8rem;
-    padding: 0 1.2rem;
-    font-size: 1.6rem;
-    box-shadow: inset 0 0 0 0.2rem var(--white);
-    border-radius: inherit;
-}
-
-.score-history-list-item div {
-    display: inherit;
-    gap: 0.8rem;
 }
 
 /* GAME-BOARD CONTAINER DIV */
