--- a/tic-tac-toe/assets/css/style.css
+++ b/tic-tac-toe/assets/css/style.css
@@ -115,15 +115,39 @@ body {
     z-index: 2;
 }
 
+/* CLOSE POPUP BUTTON */
+.btn-close-popup {
+    all: unset;
+    position: absolute;
+    top: 1.2rem;
+    right: 1.2rem;
+    transition: all 0.5s;
+    cursor: pointer;
+}
+
+.btn-close-popup:hover {
+    transform: translateY(-0.4rem);
+    opacity: 0.5;
+}
+
+.btn-close-popup ion-icon {
+    font-size: 3.2rem;
+}
+
 /* SCORE HISTORY CONTAINER DIV */
-.div-game-history-container {
+.div-game-history-popup-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
     display: flex;
     flex-direction: column;
     gap: 1.2rem;
+    width: 64rem;
+    transform: translate(-50%, -50%);
 }
 
-.div-game-history-container h3 {
-    font-size: 1.8rem;
+.div-game-history-popup-content h3 {
+    font-size: 2.4rem;
     font-weight: 500;
     text-align: center;
 }
@@ -133,19 +157,14 @@ body {
     display: flex;
     flex-direction: column;
     gap: 1.2rem;
-    height: calc((3 * 4.8rem) + (2 * 1.2rem));
+    height: calc((5 * 4.8rem) + (4 * 1.2rem));
     border-radius: 0.4rem;
     list-style: none;
     overflow-y: scroll;
 }
 
 .score-history-list::-webkit-scrollbar {
-    width: 0.4rem;
-}
-
-.score-history-list::-webkit-scrollbar-thumb {
-    background-color: var(--white);
-    border-radius: 0.4rem;
+    display: none;
 }
 
 .score-history-list-item {
@@ -154,7 +173,6 @@ body {
     align-items: center;
     justify-content: space-between;
     height: 4.8rem;
-    margin-right: 0.8rem;
     padding: 0 1.2rem;
     font-size: 1.6rem;
     box-shadow: inset 0 0 0 0.2rem var(--white);
@@ -210,9 +228,14 @@ body {
 .dashboard-header {
     display: flex;
     align-items: center;
-    justify-content: flex-start;
-    gap: 0.4rem;
+    justify-content: space-between;
     padding: 1.6rem;
+}
+
+.div-dashboard-header-logo {
+    display: inherit;
+    align-items: inherit;
+    gap: 0.4rem;
 }
 
 .dashboard-header img {
@@ -221,6 +244,28 @@ body {
 
 .dashboard-header h1 {
     font-size: 2.4rem;
+}
+
+/* VIEW GAME HISTORY BUTTON */
+.dashboard-header button {
+    all: unset;
+    display: inherit;
+    align-items: inherit;
+    justify-content: center;
+    width: 3.2rem;
+    aspect-ratio: 1 / 1;
+    background: linear-gradient(to left top, var(--gradient-red), var(--gradient-indigo));
+    border-radius: 50%;
+    transition: opacity 0.5s;
+    cursor: pointer;
+}
+
+.dashboard-header button:hover {
+    opacity: 0.5;
+}
+
+.dashboard-header ion-icon {
+    font-size: 1.6rem;
 }
 
 /* LEADERBOARD DIV */
@@ -232,7 +277,6 @@ body {
     flex-direction: column;
     gap: 1.2rem;
     width: 48rem;
-    aspect-ratio: 1 / 1;
     border-radius: 0.4rem;
     transform: translate(-50%, -50%);
 }
@@ -243,11 +287,11 @@ body {
 }
 
 .leaderboard-header h2 {
-    font-size: 2.4rem;
+    font-size: 3.2rem;
 }
 
 .leaderboard-header p {
-    font-size: 1.6rem;
+    font-size: 2rem;
 }
 
 /* SCOREBOARD CONTAINER DIV */
@@ -260,16 +304,16 @@ body {
 
 /* SCORE CONTAINER DIV */
 .div-score-container p {
-    font-size: 8rem;
+    font-size: 9.6rem;
 }
 
 .div-score-container img {
-    height: 4.8rem;
+    height: 6.4rem;
 }
 
 /* SCORE LABELS CONTAINER DIV */
 .div-score-labels-container ion-icon {
-    font-size: 4rem;
+    font-size: 4.4rem;
 }
 
 /* GAME-BOARD CONTAINER DIV */
