--- a/tic-tac-toe/assets/css/style.css
+++ b/tic-tac-toe/assets/css/style.css
@@ -155,12 +155,11 @@ body {
 /* SCORE HISTORY LIST */
 .score-history-list {
     display: flex;
-    flex-direction: column;
     gap: 1.2rem;
     height: calc((5 * 4.8rem) + (4 * 1.2rem));
     border-radius: 0.4rem;
     list-style: none;
-    overflow-y: scroll;
+    overflow-x: scroll;
 }
 
 .score-history-list::-webkit-scrollbar {
@@ -169,9 +168,22 @@ body {
 
 .score-history-list-item {
     flex-shrink: 0;
+    width: 100%;
+}
+
+.inner-score-history-list {
+    display: flex;
+    flex-direction: column;
+    gap: 1.2rem;
+    border-radius: 0.4rem;
+    list-style: none;
+}
+
+.inner-score-history-list-item {
     display: inherit;
     align-items: center;
     justify-content: space-between;
+    width: 100%;
     height: 4.8rem;
     padding: 0 1.2rem;
     font-size: 1.6rem;
