--- a/tic-tac-toe/assets/css/style.css
+++ b/tic-tac-toe/assets/css/style.css
@@ -71,7 +71,7 @@ html {
     top: 0;
     width: 0.2rem;
     height: inherit;
-    background-color: var(--white);
+    background: var(--white);
 }
 
 .div-confirmation-popup-content::before {
@@ -294,7 +294,7 @@ html {
     left: 0;
     width: 100%;
     height: 100vh;
-    background-color: var(--shadow-black-sm);
+    background: var(--shadow-black-sm);
     backdrop-filter: blur(0.8rem);
     transition: transform 1s;
     z-index: 1;
@@ -319,7 +319,7 @@ html {
     left: 50%;
     width: 0.2rem;
     height: 100%;
-    background-color: var(--white);
+    background: var(--white);
     transform: translateX(-50%);
 }
 
@@ -439,8 +439,6 @@ html {
     position: absolute;
     top: 50%;
     left: 50%;
-    padding: 1.2rem;
-    background-color: var(--white);
     border-radius: 0.4rem;
     transform: translate(-50%, -50%);
 }
@@ -454,6 +452,7 @@ html {
     font-weight: 500;
     text-align: center;
     background: var(--to-right-bottom-gradient);
+    box-shadow: inset 0 0 0 0.2rem var(--white);
     border-radius: 0.4rem;
     transition: opacity 0.5s;
     cursor: pointer;
@@ -493,7 +492,7 @@ html {
     left: 0;
     width: 6.4rem;
     height: 0.2rem;
-    background-color: var(--white);
+    background: var(--white);
     border-radius: 0.4rem 0.4rem 0 0;
 }
 
