--- a/tic-tac-toe/assets/css/style.css
+++ b/tic-tac-toe/assets/css/style.css
@@ -452,7 +452,7 @@ html {
     font-weight: 500;
     text-align: center;
     background: var(--to-right-bottom-gradient);
-    box-shadow: inset 0 0 0 0.2rem var(--white);
+    box-shadow: 0 0.8rem 0.8rem var(--shadow-black-sm);
     border-radius: 0.4rem;
     transition: opacity 0.5s;
     cursor: pointer;
@@ -460,6 +460,11 @@ html {
 
 .div-game-btn-container button:hover {
     opacity: 0.5;
+}
+
+.hide {
+    opacity: 0 !important;
+    z-index: -1 !important;
 }
 
 /* GAME-BOARD CONTAINER DIV */
@@ -471,6 +476,7 @@ html {
     flex-direction: column;
     gap: 1.6rem;
     transform: translate(150%, -50%);
+    transition: transform 1s;
 }
 
 /* GAME-BOARD HEADER */
